Fixing price and qty fields
